# H4_Embedded_AVR

./: Cargo.toml  DOCS.md  Makefile  README.md  avr-unknown-gnu-atmega328pb.json  compile_commands.json  devenv.nix  flake.nix  main.c
.cargo/: config.toml
src/: main.rs
src/hal/: port.rs
