[package]
name = "h4_embedded_avr"
version = "0.1.0"
edition = "2024"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[dependencies]
avr-device = { version = "0.7.0", features = ["atmega328pb", "rt"] }
